tested work and cleaned up

--- a/templates/options.html
+++ b/templates/options.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 {% block info %}
 <form action='/username' method='post'>
-    <label for="username">
-        Username<input type='text' value="" name='username' />
-    </label>
-    <label for="password">
-        Password<input type="password" name="password" />
-    </label>
-
+    <tr>
+        <td>
+        <label for="username">
+            Username<input type='text' value="" name='username' />
+        </label></td><br>
+        <td>
+        <label for="password">
+            Password<input type="password" name="password" />
+        </label>
+        </td>
+    </tr>
 </form>
 {% endblock %}
