--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,13 @@
         .error { color: red }
     </style>
 
-    <h1>Signup</h1>    
+       
 </head>
 <body>
-    {% block content %}
+    
+    <h1>Signup</h1> 
+
+    {% block info %}
     {% endblock %}
     
 </body>
