added welcome page. Functioning perfectly

--- a/templates/options.html
+++ b/templates/options.html
@@ -42,7 +42,7 @@
                     <label for="email">Email (optional)</label>
                 </td>
                 <td>
-                    <input name="email" />
+                    <input type="text" name="email" />
                     {% if erroremail %}
                     <span class="error">{{erroremail}}</span>
                     {% endif %}
